# w4d5-mle-mlops-project

./: .gitignore  .pre-commit-config.yaml  01-train-ml-model-refactored.py  LICENSE  README.md  docker_clean_pull_run.sh  pyproject.toml  requirements.txt  send_data.py
.dvc/: config
.github/workflows/: cml.yaml  deploy.yaml
data/: .gitignore  green_tripdata_2022-01.parquet.dvc  green_tripdata_2022-02.parquet.dvc
deployment/prometheus_deployment/prometheus/: prometheus.yml  prometheus.yml.template
evidently_service/: app.py
refactoring/: 01-train-ml-model.py
src/: train.py  train_cli.py  train_cli_xgboost.py
src/data/: .gitignore  green_tripdata_2021-02.parquet.dvc
webservice/: app.py  predict.py
