[tool.poetry]
name = "mle-nf-mlops-project"
version = "0.1.0"
description = "MLOps Project"
authors = ["Tamer Ajaj"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.3"
mlflow = "^2.5.0"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
google-cloud-storage = "^2.10.0"
xgboost = "^1.7.6"
dvc = "^3.6.0"
dvc-gs = "^2.22.1"
pre-commit = "^3.3.3"
python-dotenv = "^1.0.0"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
